# lariat

./: .gitignore  README.md  example_config.yaml  lariat.slurm  pyproject.toml  wget-log
lariat/: genome_utils.py
lariat/database/: __init__.py  data_model.py  database.py
lariat/database/pipeline/: config_models.py  main.smk  run_pipeline.py
lariat/database/pipeline/.snakemake/metadata/: aXNvZm9ybURCL0s1NjIvZ2VuZV9pbnRlcnZhbHMuYmVk  aXNvZm9ybURCL0s1NjIvaXNvZm9ybV9xdWFudGl0YXRpb24udHN2  aXNvZm9ybURCL0s1NjIvaXNvZm9ybXMudHN2  aXNvZm9ybURCL0s1NjIvdHJhbnNjcmlwdF9hbm5vdGF0aW9uLmd0Zi5neg==  aXNvZm9ybURCL2NvbW1pdHRlZC9kYXRhc2V0PUs1NjI7YnVsa19sZXZlbD1idWxrO3JlYWRfdHlwZT1sb25n  aXNvZm9ybURCL2NvbmZpZ3MvSzU2Mi5qc29u  aXNvZm9ybURCL2RhdGFiYXNlL2RhdGFzZXRfaWQ9SzU2Mg==  aXNvZm9ybURCL2RhdGFiYXNlL2RhdGFzZXRfaWQ9SzU2Mi9kYXRhLnBhcnF1ZXQ=  aXNvZm9ybURCL2RhdGFiYXNlL2lzX2xvbmdfcmVhZD10cnVlL3JlZmVyZW5jZV9pZD1ncmNoMzguZ2VuY29kZS52MjkvZGF0YXNldF9pZD1LNTYy  aXNvZm9ybURCL2RhdGFiYXNlL3BhcnRpdGlvbj10cmFpbi9kYXRhc2V0X2lkPUs1NjIvZGF0YS5wYXJxdWV0  aXNvZm9ybURCL2RhdGFiYXNlL3JlYWRfdHlwZT1sb25nL2RhdGFzZXRfaWQ9SzU2Mg==  aXNvZm9ybURCL2RhdGFiYXNlL3JlYWRfdHlwZT1sb25nL3JlZmVyZW5jZV9pZD1ncmNoMzguZ2VuY29kZS52MjkvZGF0YXNldF9pZD1LNTYy  aXNvZm9ybURCL2RhdGFzZXRzL0s1NjIvaXNvZm9ybV9xdWFudGl0YXRpb24udHN2  aXNvZm9ybURCL2RhdGFzZXRzL0s1NjIvaXNvZm9ybXMudHN2  aXNvZm9ybURCL2RhdGFzZXRzL0s1NjIvdHJhbnNjcmlwdF9hbm5vdGF0aW9uLmd0Zi5neg==  aXNvZm9ybURCL2RiX3JlY29yZHMuanNvbg==  aXNvZm9ybURCL2Rvd25sb2Fkcy9LNTYyL3F1YW50aXRhdGlvbi50c3Y=  aXNvZm9ybURCL2Rvd25sb2Fkcy9LNTYyL3RyYW5zY3JpcHRfYW5ub3RhdGlvbi5ndGYuZ3o=  aXNvZm9ybURCL2dyY2gzOC5nZW5jb2RlLnYyOS9nZW5lX2Fubm90YXRpb24uZ3RmLmd6  aXNvZm9ybURCL2dyY2gzOC5nZW5jb2RlLnYyOS9nZW5lX2ludGVydmFscy5iZWQ=  aXNvZm9ybURCL2ludGVybWVkaWF0ZXMvSzU2Mi90cmFuc2NyaXB0X2Fubm90YXRpb24uZ3RmLmd6  (+7 more)
lariat/database/pipeline/envs/: gffread.yaml  regtools.yaml
lariat/database/pipeline/scripts/: calculate_junc_annot_offsets.py  collapse_transcripts.py  select_canonical_gene.py  utils.py  write_records.py  write_sr_records.py
lariat/database/pipeline/workflows/: deconvolution.smk  downloads.smk  junction_processing.smk  long_read_processing.smk  short_read_processing.smk
lariat/database/tracks/: __init__.py  encode.py  main.smk  run_pipeline.py  track_db.py
lariat/database/tracks/envs/: bigwig_from_bam.yaml  wiggletools.yaml  zarr.yaml
lariat/database/tracks/scripts/: chromsizes_from_bigwig.py  mm10.chromsizes.txt  write_zarr.py
lariat/dataloader/: isoform_loader.py  track_loader.py  writer.py
lariat/model/objectives/: isoform.py  junction_loss.py  track.py
lariat/plot/: __init__.py  exon_plot.py
